userChrome.css
/*Цвет пустой области, не путать со страницей*/
#browser vbox#appcontent tabbrowser,
#content,
#tabbrowser-tabpanels,
browser[type=content-primary],
browser[type=content] > html {
background: #1f1f1f !important;}

[sizemode="normal"][tabsintitlebar]:root:-moz-window-inactive{border-top:1px solid #3a393d !important;}
#main-window {background: #1f1f1f !important;}

/*Цвет фона неактивной вкладки*/
.tab-background {background: #0c0c0c;}

.tabbrowser-tab {
  padding-inline: 0px !important;
}

#tabbrowser-tabs {
  margin-inline-start: 0px !important;
  padding-inline-start: 0px !important;
  border-inline-start: 0px !important;
}

/*Линия над активной вкладкой*/
.tab-line {height: 0px !important;}

/*Отступ над вкладками*/
#TabsToolbar {
  margin-top:0px !important;
}

:root[id]{
    --tab-block-margin: 0px !important;
}

/*Адресная строка*/
#urlbar{
background: none !important;
border: none !important;
box-shadow: none !inportant;
font-size: 12px !important;
padding-left: 3px !important;
text-align-last: center !important;
color: #999999 !important;}

#urlbar-background {
background: #1f1f1f !important;
border: none !important;
}

.urlbarView-url {
  /*спасибо мозилле за этот прекрасный костыль*/
  padding-right: 9000px;
}

/*СКРЫТИЕ*/
/*#PanelUI-menu-button,*/ /*Кнопка меню*/
/*#pageActionButton,*/ /*Кнопка опций в адрес.строке*/
#identity-box,
#identity-icon-labels,
#connection-icon,
.tab-close-button, /*Кнопка закрытия вкладок*/
#back-button, #forward-button, /*Кнопки назад-вперед*/
/*.tabs-newtab-button,*/ /*Кнопка новой вкладки*/
.tab-icon-image, /*Иконка вкладки*/
#tracking-protection-icon-container, /*Иконка инф-ции о безопас-ти стр-цы*/
#fxa-toolbar-menu-button /*Иконка аккаунта*/
{display: none !important;}

/*Цвет навбара*/
#nav-bar {box-shadow: none !important; border-top: 0 !important; background: #1f1f1f !important; font: "Google Sans Regular" !important;}

/*Цвет заголовочного блока*/
#navigator-toolbox > toolbar {background: #1f1f1f; color:#999999 !important;}

.tabbrowser-tab::before, .tabbrowser-tab::after {display: none !important;}

/*Кнопки управления окном*/
.titlebar-buttonbox{visibility: hidden !important; margin: -90px !important;}

/*Пустая область слева в заголовке*/
#TabsToolbar .titlebar-spacer[type="pre-tabs"], .titlebar-spacer[type="post-tabs"] {display: none !important;}

/*Цвет текста во вкладках*/
.tab-label-container {color:#676767 !important; mask-image: initial !important;}
.tab-label-container[selected="true"] {color: #999999 !important; mask-image: initial !important;}

/*Скрытие линии под панелью и тени адресбара*/
#navigator-toolbox::after {border-bottom: 0px !important; }
#navigator-toolbox {border-width: 0px !important; }
#urlbar, .searchbar-textbox {
/*! min-width: 100px !important; */
max-width: 100% !important;}
#urlbar:hover,.searchbar-textbox:hover {
min-width: 100px !important;
max-width: 100% !important;}

/*Растягивание вкладок на всю площадь заголовка*/
.tabbrowser-tab[fadein]:not([pinned]) {
min-width: 100px !important;
max-width: 100% !important;}

/*Иконки у закладок*/
#personal-bookmarks .bookmark-item > .toolbarbutton-icon {display: none;}
#PersonalToolbar {max-height: 2em !important;}

/*Сдвиг страницы для скрытия скроллбара*/
browser{
margin-right: -17px !important;
overflow-y: scroll;
overflow-x: hidden;}

/*Скрытие маркера звука*/
/*все равно после обновления не работает*/
/*.tab-icon-sound{display:none;}*/

/*Скрытие маркера загрузки страницы*/
.tab-throbber{display:none;}

/*Центрирование текста во вкладках*/
.tab-label { line-height: 2.5 !important;}
/*Спасибо мозилле за этот прекрасный костыль*/
.tab-label-container{ -moz-box-pack: center; -moz-box-orient: horizontal }
.tab-secondary-label{ display:none }

/*Стирание вспомогательного текста во вкладке при фокусировке*/
input:focus::-moz-placeholder {background:#0077a6 !important;}

/*Цвет вкладки при наведении*/
.tabbrowser-tab:hover{background:#0077a6 !important;}
.tabbrowser-tab:hover .tab-label-container {color: #fff !important;}
.tabbrowser-tab[selected="true"]:hover .tab-label-container {color: #999999 !important;}

/*Скрытие в контекстном меню "закрепление вкладки"*/
#context_pinTab{display:none;}

/*Скрытие дропмаркера и пуска адрессбара*/
.urlbar-history-dropmarker, .urlbar-go-button {display:none !important;}

/*Цвет активной вкладки*/
.tab-background[selected="true"] {
background-attachment: none !important;
background-color: #1f1f1f !important;
background-image: none !important;}

/*Цвет дроп меню.*/
#PopupAutoCompleteRichResult .autocomplete-richlistbox {
background: #1f1f1f !important;
border:none !important;
width:100% !important;
margin-top:-1px !important;
margin-bottom:-1px !important;
margin-right:-1px !important;
margin-left:-1px !important;}

/*Цвет невыделенного-невыбранного текста*/
.autocomplete-richlistitem .ac-title,
.autocomplete-richlistitem .ac-action,
.autocomplete-richlistitem .ac-separator
{color: #777 !important;}

/*Выделенная вкладка в дропменю*/
.autocomplete-richlistitem:hover
{background-color: #0077a6 !important;}

/*Выбранная вкладка в дропменю*/
.autocomplete-richlistitem[selected]
{background-color: #0077a6 !important;}

/*Выбранный текст в дропменю адресбара*/
.autocomplete-richlistitem[selected=true] .ac-title,
.ac-title[selected],
.autocomplete-richlistitem[selected=true] .ac-action,
.ac-action[selected],
.autocomplete-richlistitem[selected=true] .ac-separator,
.ac-separator[selected]
{color: #fff !important;}

/*Выделенный текст в дропменю адресбара*/
.autocomplete-richlistitem:hover .ac-title,
.ac-title:hover,
.autocomplete-richlistitem:hover .ac-action,
.ac-action:hover,
.autocomplete-richlistitem:hover .ac-separator,
.ac-separator:hover
{color: #fff !important;}

/*Шрифт в браузере*/
* {font-family: "Google Sans" !important;}

/*Спасибо новому обновлению за этот костыль: фиксит вид вкладок*/
* {
--proton-tab-block-margin: 0px !important;
--tab-border-radius: 0px !important;}

/*Скрытие иконки инокгнито*/
#TabsToolbar .private-browsing-indicator { display: none; }

/*Скрытие кнопки списка всех вкладок*/
#alltabs-button{ display: none }

/*  Clean and tight extensions menu https://github.com/datguypiko/Firefox-Mod-Blur */
#unified-extensions-panel #unified-extensions-view {
  max-width: 200px !important;
}

#unified-extensions-view .panel-header,
#unified-extensions-view .panel-header + toolbarseparator,
#unified-extensions-view .panel-subview-body + toolbarseparator,
#unified-extensions-view #unified-extensions-manage-extensions {
    display:none !important;
}

#unified-extensions-view .unified-extensions-item-menu-button.subviewbutton{
    display: none !important;
}

#unified-extensions-view .panel-subview-body {
    padding-top: 8px !important;
    padding-bottom: 6px !important;
}

#unified-extensions-view .unified-extensions-item-icon, 
#unified-extensions-view .unified-extensions-item[unified-extensions="true"] .webextension-browser-action 
> .toolbarbutton-badge-stack > .toolbarbutton-icon {
    height: 16px !important;
    width: 16px !important;
}

#unified-extensions-view .unified-extensions-item-action-button .unified-extensions-item-contents {
    display: none !important;
}

#unified-extensions-view .unified-extensions-item-icon, 
#unified-extensions-view .unified-extensions-item[unified-extensions="true"] .webextension-browser-action > .toolbarbutton-badge-stack {
  margin-inline-end: 0px !important;
}

#unified-extensions-view #overflowed-extensions-list {
    display: flex !important;
    flex-wrap: wrap !important;
}

#unified-extensions-view #unified-extensions-area {
    display: flex !important;
    flex-wrap: wrap !important;
    padding-bottom: 2px !important;
}

#unified-extensions-view .unified-extensions-list {
    display: flex !important;
    flex-wrap: wrap !important;
  border-top: 1px solid #aeaeae33 !important;
}

